syntax = "proto3";

package FaceDataServer;

service FaceDataServer {
  rpc init(VoidCom) returns (Status) {}
  rpc startStream(ReqCommand) returns (stream FaceData) {}
  rpc stopStream(VoidCom) returns (Status) {}
}

message VoidCom {}

message Status {
  bool success = 1;
  int32 exitCode = 2;
}

message ReqCommand {
  enum msg {
    // Start Face-Data-Server
    START = 0;
    // Stop sending FaceData while server is still on
    STOP  = 1;
    // Stop server itself
    EXIT  = 2;
  }

}
message FaceData {
  float x = 1;
  float y = 2;
  float z = 3;
}
